--- a/mongo/provisioning/configmap.yml
+++ b/mongo/provisioning/configmap.yml
@@ -3,4 +3,4 @@ apiVersion: v1
 metadata:
   name: mongo
 data:
-  MONGODB_URI: mongodb://mongo-0.mongo:27017/uz-bookint
+  MONGODB_URI: mongodb://mongo-0.mongo:27017/uz-booking
