--- a/watcher/package.json
+++ b/watcher/package.json
@@ -28,6 +28,7 @@
     "uz-booking-client": "^1.0.7"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "4.1.0",
