--- a/watcher/Dockerfile
+++ b/watcher/Dockerfile
@@ -5,11 +5,9 @@ COPY . .
 
 FROM base AS dependencies
 RUN npm install
-RUN npm run build
 
 FROM base AS release
 COPY --from=dependencies /usr/src/app/node_modules ./node_modules
-COPY --from=dependencies /usr/src/app/build ./build
+COPY --from=dependencies /usr/src/app/src ./src
 RUN rm -f package-lock.json
-RUN rm -rf src
 CMD ["npm", "start"]
