--- a/bot/package.json
+++ b/bot/package.json
@@ -2,42 +2,37 @@
   "name": "ticket-bot-service",
   "version": "1.0.0",
   "description": "Telegram bot service",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/DmytryS/uz-booking-bot.git"
   },
   "scripts": {
-    "start": "node -r esm ./src/index",
-    "dev": "NODE_ENV=development nodemon --watch src -r esm ./src/index",
+    "start": "node --experimental-modules ./src/index.js",
+    "dev": "NODE_ENV=development nodemon --experimental-modules --watch src ./src/index.JS",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --list-different 'src/**/*.js' && eslint 'src/**/*.js'",
-    "lint:fix": "prettier --write 'src/**/*.js' && eslint --fix 'src/**/*.js'"
+    "lint": "eslint 'src/**/*.js'",
+    "lint:fix": "eslint --fix 'src/**/*.js'"
   },
   "author": "Dmytro Shvaika",
   "license": "MIT",
   "dependencies": {
     "amqplib": "^0.5.3",
     "dotenv": "^6.2.0",
-    "esm": "^3.2.25",
-    "log4js": "^3.0.6",
     "moment": "^2.22.2",
     "mongoose": "^5.4.4",
     "telegraf": "^3.25.5",
     "telegraf-calendar-telegram": "^1.5.7",
-    "uz-booking-client": "^1.0.7"
+    "uz-booking-client": "^1.1.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "nodemon": "^1.18.9",
-    "prettier": "1.16.4"
-  },
-  "prettier": {
-    "singleQuote": true
+    "nodemon": "^1.18.9"
   }
 }
