--- a/planner/package.json
+++ b/planner/package.json
@@ -2,28 +2,28 @@
   "name": "ticket-watcher-planner-service",
   "version": "1.0.0",
   "description": "Planner service",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/DmytryS/uz-booking-bot.git"
   },
   "scripts": {
-    "start": "node -r esm ./src/index",
-    "dev": "NODE_ENV=development nodemon --watch src -r esm ./src/index",
+    "start": "node --experimental-modules ./src/index.js",
+    "dev": "NODE_ENV=development nodemon --watch src --experimental-modules ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --list-different 'src/**/*.js' && eslint 'src/**/*.js'",
-    "lint:fix": "prettier --write 'src/**/*.js' && eslint --fix 'src/**/*.js'"
+    "lint": "eslint 'src/**/*.js'",
+    "lint:fix": "eslint --fix 'src/**/*.js'"
   },
   "author": "Dmytro Shvaika",
   "license": "MIT",
   "dependencies": {
     "amqplib": "^0.5.3",
     "dotenv": "^6.2.0",
-    "esm": "^3.2.25",
     "lodash": "^4.17.11",
-    "log4js": "^3.0.6",
     "moment-timezone": "^0.5.23",
-    "mongoose": "^5.4.4"
+    "mongoose": "^5.4.4",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -36,8 +36,7 @@
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "nodemon": "^1.18.10",
-    "prettier": "1.16.4"
+    "nodemon": "^1.18.10"
   },
   "prettier": {
     "singleQuote": true
