--- a/watcher/.eslintrc
+++ b/watcher/.eslintrc
@@ -11,8 +11,14 @@
       "spread": true
     }
   },
-  "extends": ["airbnb-base/legacy", "prettier"],
-  "plugins": ["import", "prettier"],
+  "extends": [
+    "airbnb-base/legacy",
+    "prettier"
+  ],
+  "plugins": [
+    "import",
+    "prettier"
+  ],
   "rules": {
     "quotes": [
       2,
@@ -28,7 +34,10 @@
     "no-underscore-dangle": [
       "error",
       {
-        "allow": ["_id", "_"],
+        "allow": [
+          "_id",
+          "_"
+        ],
         "enforceInMethodNames": false,
         "allowAfterThis": true
       }
