--- a/watcher/package.json
+++ b/watcher/package.json
@@ -2,17 +2,18 @@
   "name": "ticket-watcher-service",
   "version": "1.0.0",
   "description": "Watcher service",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/DmytryS/uz-booking-bot.git"
   },
   "scripts": {
-    "start": "node -r esm ./src/index",
-    "dev": "NODE_ENV=development nodemon --watch src -r esm ./src/index",
+    "start": "node --experimental-modules ./src/index.js",
+    "dev": "NODE_ENV=development nodemon --watch src --experimental-modules ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --list-different 'src/**/*.js' && eslint 'src/**/*.js'",
-    "lint:fix": "prettier --write 'src/**/*.js' && eslint --fix 'src/**/*.js'"
+    "lint": "eslint 'src/**/*.js'",
+    "lint:fix": "eslint --fix 'src/**/*.js'"
   },
   "author": "Dmytro Shvaika",
   "license": "MIT",
@@ -20,24 +21,20 @@
     "amqplib": "^0.5.3",
     "dotenv": "^6.2.0",
     "esm": "^3.2.25",
-    "lodash": "^4.17.11",
-    "log4js": "^3.0.6",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.4.4",
     "underscore": "^1.9.1",
-    "uz-booking-client": "^1.0.7"
+    "uz-booking-client": "^1.1.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "nodemon": "^1.18.10",
-    "prettier": "1.16.4"
-  },
-  "prettier": {
-    "singleQuote": true
+    "nodemon": "^1.18.10"
   }
 }
