--- a/rabbit/provisioning/configmap.yml
+++ b/rabbit/provisioning/configmap.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: amqp
 data:
-  RABBIT_MQ_URI: amqp://rabbit-0.rabbit
+  RABBIT_MQ_URI: amqp://rabbit.rabbit
   RABBIT_RECONNECT_INTERVAL: "10000"
   NOTIFICATIONS_QUEUE: notifications_queue
   WORKER_QUEUE: worker_queue
