--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
-language: node_js
-node_js:
-  - "12"
+# language: node_js
+# node_js:
+#   - "12"
 services:
   - docker
 branches:
