--- a/watcher/Dockerfile
+++ b/watcher/Dockerfile
@@ -2,8 +2,8 @@ FROM node:12-alpine
 
 ARG NODE_ENV
 WORKDIR /usr/src/app
-COPY .npmrc  package.json ./
-RUN npm i --quiet && rm .npmrc
+COPY package.json ./
+RUN npm i --quiet
 COPY . .
 
 RUN apk add --no-cache bash vim curl iputils
