--- a/planner/package.json
+++ b/planner/package.json
@@ -17,15 +17,18 @@
   "author": "Dmytro Shvaika",
   "license": "MIT",
   "dependencies": {
-    "amqplib": "^0.5.5",
+    "amqplib": "^0.5.6",
     "dotenv": "^8.2.0",
+    "has-ansi": "^4.0.0",
     "lodash": "^4.17.15",
-    "moment-timezone": "^0.5.28",
-    "mongoose": "^5.9.6",
-    "winston": "^3.2.1"
+    "moment-timezone": "^0.5.31",
+    "mongoose": "^5.9.16",
+    "triple-beam": "^1.3.0",
+    "winston": "^3.2.1",
+    "winston-transport": "^4.3.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "nodemon": "^2.0.2"
+    "eslint": "^7.1.0",
+    "nodemon": "^2.0.4"
   }
 }
